Removed old sharjah.docx and updated resume PDF link

--- a/index.html
+++ b/index.html
@@ -370,7 +370,9 @@
       </ul>
     </nav>
     <div class="cta-buttons">
-  <a href="assets/RAMAGOWTHAMI_ANGULAR_JAVA_RESUME_Sharjha.docx" target="_blank" class="btn">View Resume</a>
+  <!--<a href="assets/RAMAGOWTHAMI_ANGULAR_JAVA_RESUME_Sharjha.docx" target="_blank" class="btn">View Resume</a>-->
+  <a href="./assets/RamaGowthamiResumePDF.pdf" target="_blank" class="btn">View Resume</a>
+
   <a href="#contact" class="btn btn-outline">Get In Touch</a>
 </div>
 
